--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('milkyway.jpg');
+  background-image: url("milkyway.jpg");
   background-size: auto;
   image-rendering: auto;
   
