--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ table {
   width: 60%;
   height: 200px;
   border: 2px solid white;
-  font-family: Audiowide;
+  font-family: 'Audiowide';
   margin-right: auto;
   margin-left: auto;
 }
