--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body 
 {
-  background-image: url("milkyway.gif");
+  background-image: url('pictures/milkyway.gif');
   background-size: auto;
 }
 
