--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ h3 {
   text-align: center;
   font-size: 50px;
 }
+tr 
+{
+  border: 3px;
+  color: white;
+}
+th 
+{
+  background-color: white;
+}
+td 
+{
+  background-color: white;
+}
