--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ table {
 h1 {
   font-family: 'Orbitron';
   color :white;
-  font-weight:bold;
   font-size: 50px;
   text-align: center;
 }
@@ -30,16 +29,15 @@ h3 {
 }
 tr 
 {
-  border: 3px;
-  color: white;
+  border: 3px solid white;
 }
 th 
 {
   background-color: white;
-  border: 3px
+  border: 3px solid white;
 }
 td 
 {
   background-color: white;
-  border: 3px
+  border: 3px solid white;
 }
